# python-zeep

./: README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-release.yml  python-test.yml
docs/: conf.py  index.rst
src/zeep/: cache.py  client.py
src/zeep/wsdl/: attachments.py  definitions.py  wsdl.py
src/zeep/wsse/: utils.py
src/zeep/xsd/: utils.py
src/zeep/xsd/elements/: indicators.py
src/zeep/xsd/types/: any.py  builtins.py  complex.py
tests/: conftest.py  test_async_transport.py  test_cache.py  test_xsd_builtins.py  test_xsd_extension.py
